// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiListGroupItem is rendered 1`] = `
<li
  aria-label="aria-label"
  class="euiListItemLayout euiListGroupItem testClass1 testClass2 euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props color primary is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-primary"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props color subdued is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-subdued"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props color text is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props extraAction is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
    <button
      aria-label="label"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-alwaysShow"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="empty"
      />
    </button>
  </span>
</li>
`;

exports[`EuiListGroupItem props href and onClick is rendered 1`] = `
<li
  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
  data-test-subj="euiListItemLayout-wrapper"
>
  <a
    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
    href="#"
    rel="noreferrer"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label"
      >
        Label
      </span>
    </span>
  </a>
</li>
`;

exports[`EuiListGroupItem props href is rendered 1`] = `
<li
  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
  data-test-subj="euiListItemLayout-wrapper"
>
  <a
    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
    href="#"
    rel="noreferrer"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label"
      >
        Label
      </span>
    </span>
  </a>
</li>
`;

exports[`EuiListGroupItem props href is rendered with rel 1`] = `
<li
  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
  data-test-subj="euiListItemLayout-wrapper"
>
  <a
    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
    href="#"
    rel="noreferrer"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label"
      >
        Label
      </span>
    </span>
  </a>
</li>
`;

exports[`EuiListGroupItem props icon is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
    >
      <span
        class="euiListGroupItem__icon css-0"
      />
    </span>
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props iconType is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
    >
      <span
        class="euiListGroupItem__icon css-0"
        color="inherit"
        data-euiicon-type="empty"
      />
    </span>
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props isActive is rendered 1`] = `
<li
  aria-current="true"
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-isSelected-euiListGroupItem-euiListGroupItem__inner"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props isDisabled is rendered 1`] = `
<li
  aria-disabled="true"
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-isDisabled-euiListGroupItem-euiListGroupItem__inner"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props onClick is rendered 1`] = `
<li
  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
  data-test-subj="euiListItemLayout-wrapper"
>
  <button
    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
    type="button"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label"
      >
        Label
      </span>
    </span>
  </button>
</li>
`;

exports[`EuiListGroupItem props showToolTip is rendered 1`] = `
<li
  aria-describedby="generated-id"
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiToolTipAnchor euiListGroupItem__tooltip emotion-euiToolTipAnchor-inlineBlock-euiListGroupItem__tooltip"
    id="generated-id-wrapper"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      >
        Label
      </span>
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props style is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
  style="color: red;"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem props wrapText is rendered 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-wrap"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem renders a disabled button even if provided an href 1`] = `
<li
  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isDisabled"
  data-test-subj="euiListItemLayout-wrapper"
>
  <button
    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-isDisabled-euiListGroupItem-euiListGroupItem__inner"
    data-test-subj="euiListItemLayout"
    disabled=""
    type="button"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label"
      >
        Label
      </span>
    </span>
  </button>
</li>
`;

exports[`EuiListGroupItem renders a disabled button even if provided an href 2`] = `
<li
  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isDisabled"
  data-test-subj="euiListItemLayout-wrapper"
>
  <button
    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-isDisabled-euiListGroupItem-euiListGroupItem__inner"
    data-test-subj="euiListItemLayout"
    disabled=""
    type="button"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label"
      >
        Label
      </span>
    </span>
  </button>
</li>
`;

exports[`EuiListGroupItem throws a warning if both iconType and icon are provided but still renders 1`] = `
<li
  class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
    >
      <span
        class="euiListGroupItem__icon css-0"
        color="inherit"
        data-euiicon-type="empty"
      />
    </span>
    <span
      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;
